Feat: 랭킹 컨트롤러 및 테스트 추가